--- a/ListAndWebservice/app/src/main/res/layout/item_list.xml
+++ b/ListAndWebservice/app/src/main/res/layout/item_list.xml
@@ -8,6 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin">
 
     <TextView
+        android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
@@ -15,6 +16,7 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/txtAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
